--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@smartweb/vue-flash-message": "^0.4.1",
         "animate.css": "^3.7.1",
+        "babel-runtime": "^6.26.0",
         "laravel-echo": "^1.5.3",
         "moment": "^2.24.0",
         "pusher-js": "^4.4.0",
@@ -38,7 +39,6 @@
         "select2": "^4.0.7",
         "sweetalert2": "^7.33.1",
         "tiptap": "^1.21.0",
-        "toastr": "^2.1.4",
         "v-money": "^0.8.1",
         "vform": "^1.0.0",
         "vue-flash-message": "^0.7.2",
