--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,12 @@
         "laravel/horizon": "^3.2",
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
+        "overtrue/laravel-follow": "^1.1",
         "predis/predis": "^1.1",
         "qoraiche/laravel-mail-editor": "^1.2",
         "spatie/laravel-activitylog": "^3.6",
         "spatie/laravel-backup": "^6.2",
+        "spatie/laravel-newsletter": "^4.5",
         "spatie/laravel-permission": "^2.37",
         "spatie/laravel-searchable": "^1.3",
         "yoeunes/toastr": "^1.2"
