--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "code4mk/lara-head": "dev-master",
         "cviebrock/eloquent-sluggable": "^4.8",
-        "diplodocker/auth-service": "^0.1.1",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
