--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "awssat/laravel-visits": "^1.5",
+        "beyondcode/laravel-websockets": "^1.1",
         "code4mk/lara-head": "dev-master",
         "cviebrock/eloquent-sluggable": "^4.8",
         "fideloper/proxy": "^4.0",
@@ -20,6 +21,7 @@
         "laravel/tinker": "^1.0",
         "overtrue/laravel-follow": "^1.1",
         "predis/predis": "^1.1",
+        "pusher/pusher-php-server": "~3.0",
         "qoraiche/laravel-mail-editor": "^1.2",
         "spatie/laravel-activitylog": "^3.6",
         "spatie/laravel-backup": "^6.2",
@@ -36,7 +38,8 @@
         "laravel/telescope": "^2.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "react/dns": "^0.4.19"
     },
     "config": {
         "optimize-autoloader": true,
