--- a/package.json
+++ b/package.json
@@ -17,21 +17,22 @@
         "cross-env": "^5.2.0",
         "jquery": "^3.4.1",
         "laravel-mix": "^4.1.2",
-        "lodash": "^4.17.14",
+        "lodash": "^4.17.15",
         "popper.js": "^1.15.0",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.22.4",
+        "sass": "^1.22.7",
         "sass-loader": "^7.1.0",
         "terser": "^3.14.1",
         "vue": "^2.6.10",
         "vue-router": "^3.0.7",
         "vue-template-compiler": "^2.6.10",
-        "webpack": "^4.35.3"
+        "webpack": "^4.36.1"
     },
     "dependencies": {
         "@smartweb/vue-flash-message": "^0.4.1",
         "animate.css": "^3.7.2",
         "babel-runtime": "^6.26.0",
+        "es6-promise": "^4.2.8",
         "laravel-echo": "^1.5.4",
         "laravel-vue-pagination": "^2.3.0",
         "moment": "^2.24.0",
@@ -50,6 +51,8 @@
         "vue-the-mask": "^0.11.1",
         "vue-wysiwyg": "^1.7.2",
         "vue2-editor": "^2.9.1",
+        "vue2-storage": "^4.0.5",
+        "vuex": "^3.1.1",
         "yimo-vue-editor": "^1.1.3"
     }
 }
