--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
         "moment": "^2.24.0",
         "pusher-js": "^4.4.0",
         "sass-loader": "^7.1.0",
-        "select2": "^4.0.7",
+        "select2": "^4.0.8",
         "sweetalert2": "^7.33.1",
-        "tiptap": "^1.23.2",
+        "tiptap": "^1.23.3",
         "v-money": "^0.8.1",
         "vform": "^1.0.1",
         "vue-flash-message": "^0.7.2",
@@ -52,6 +52,7 @@
         "vue-wysiwyg": "^1.7.2",
         "vue2-editor": "^2.9.1",
         "vue2-storage": "^4.0.5",
+        "vuejs-datepicker": "^1.6.2",
         "vuex": "^3.1.1",
         "yimo-vue-editor": "^1.1.3"
     }
