--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-pcntl": "*",
+        "ext-posix": "*",
         "cviebrock/eloquent-sluggable": "^4.8",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
