--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "vform": "^1.0.1",
         "vue-flash-message": "^0.7.2",
         "vue-progressbar": "^0.7.5",
+        "vue-rate": "^2.2.0",
         "vue-recaptcha": "^1.2.0",
         "vue-resource": "^1.5.1",
         "vue-select": "^2.6.4",
