--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
         "webpack": "^4.39.1"
     },
     "dependencies": {
-        "@smartweb/vue-flash-message": "^0.4.1",
         "animate.css": "^3.7.2",
         "babel-runtime": "^6.26.0",
         "es6-promise": "^4.2.8",
@@ -40,20 +39,14 @@
         "sass-loader": "^7.1.0",
         "select2": "^4.0.8",
         "sweetalert2": "^7.33.1",
-        "tiptap": "^1.24.1",
-        "v-money": "^0.8.1",
         "vform": "^1.0.1",
-        "vue-flash-message": "^0.7.2",
         "vue-progressbar": "^0.7.5",
         "vue-rate": "^2.2.0",
-        "vue-recaptcha": "^1.2.0",
         "vue-resource": "^1.5.1",
-        "vue-select": "^2.6.4",
         "vue-the-mask": "^0.11.1",
-        "vue-wysiwyg": "^1.7.2",
         "vue2-editor": "^2.10.0",
+        "vue2-filters": "^0.7.0",
         "vue2-storage": "^4.0.5",
-        "vuejs-datepicker": "^1.6.2",
         "vuex": "^3.1.1",
         "yimo-vue-editor": "^1.1.3"
     }
