--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "qoraiche/laravel-mail-editor": "^1.2",
         "spatie/laravel-activitylog": "^3.6",
         "spatie/laravel-backup": "^6.2",
+        "spatie/laravel-medialibrary": "^7.0.0",
         "spatie/laravel-newsletter": "^4.5",
         "spatie/laravel-permission": "^2.37",
         "spatie/laravel-searchable": "^1.3",
