--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/horizon": "^3.2",
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.8",
         "overtrue/laravel-follow": "^1.1",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "~3.0",
