--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "es6-promise": "^4.2.8",
         "laravel-echo": "^1.5.4",
         "laravel-vue-pagination": "^2.3.0",
+        "material-icons": "^0.3.1",
         "moment": "^2.24.0",
         "pusher-js": "^4.4.0",
         "sass-loader": "^7.1.0",
@@ -47,6 +48,7 @@
         "vue2-editor": "^2.10.0",
         "vue2-filters": "^0.7.0",
         "vue2-storage": "^4.0.5",
+        "vuesax": "^3.9.0",
         "vuex": "^3.1.1",
         "yimo-vue-editor": "^1.1.3"
     }
