--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "laravel-echo": "^1.5.4",
         "laravel-vue-pagination": "^2.3.0",
         "material-icons": "^0.3.1",
+        "medium-editor": "^5.23.3",
         "moment": "^2.24.0",
         "pusher-js": "^4.4.0",
         "select2": "^4.0.10",
