--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "vue": "^2.6.10",
         "vue-router": "^3.1.3",
         "vue-template-compiler": "^2.6.10",
-        "webpack": "^4.40.1"
+        "webpack": "^4.40.2"
     },
     "dependencies": {
         "animate.css": "^3.7.2",
@@ -44,6 +44,7 @@
         "vue-progressbar": "^0.7.5",
         "vue-rate": "^2.2.0",
         "vue-resource": "^1.5.1",
+        "vue-select": "^3.2.0",
         "vue-the-mask": "^0.11.1",
         "vue2-editor": "^2.10.2",
         "vue2-filters": "^0.7.2",
