--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "spatie/laravel-activitylog": "^3.6",
         "spatie/laravel-backup": "^6.2",
         "spatie/laravel-cookie-consent": "^2.8",
+        "spatie/laravel-event-projector": "^2.0.0",
         "spatie/laravel-medialibrary": "^7.0.0",
         "spatie/laravel-newsletter": "^4.5",
         "spatie/laravel-permission": "^2.37",
