--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "code4mk/lara-head": "dev-master",
         "cviebrock/eloquent-sluggable": "^4.8",
         "fideloper/proxy": "^4.0",
+        "geoip2/geoip2": "~2.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/horizon": "^3.2",
@@ -21,6 +22,7 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
         "overtrue/laravel-follow": "^1.1",
+        "pragmarx/tracker": "^3.4",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "~3.0",
         "qoraiche/laravel-mail-editor": "^1.2",
