--- a/composer.json
+++ b/composer.json
@@ -9,19 +9,19 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
-        "awssat/laravel-visits": "^1.5",
-        "beyondcode/laravel-websockets": "^1.1",
+        "awssat/laravel-visits": "^2.0",
         "code4mk/lara-head": "dev-master",
-        "cviebrock/eloquent-sluggable": "^4.8",
+        "cviebrock/eloquent-sluggable": "^6.0",
         "fideloper/proxy": "^4.0",
         "geoip2/geoip2": "~2.0",
         "intervention/image": "^2.4",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "laravel/horizon": "^3.2",
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.8",
+        "laravelcollective/html": "^6.0",
         "overtrue/laravel-follow": "^1.1",
+        "owen-it/laravel-auditing": "^9.3",
         "pragmarx/tracker": "^3.4",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "~3.0",
@@ -29,10 +29,10 @@
         "spatie/laravel-activitylog": "^3.6",
         "spatie/laravel-backup": "^6.2",
         "spatie/laravel-cookie-consent": "^2.8",
-        "spatie/laravel-event-projector": "^2.0.0",
+        "spatie/laravel-event-projector": "3.0",
         "spatie/laravel-medialibrary": "^7.0.0",
         "spatie/laravel-newsletter": "^4.5",
-        "spatie/laravel-permission": "^2.37",
+        "spatie/laravel-permission": "^3.0",
         "spatie/laravel-searchable": "^1.3",
         "waavi/sanitizer": "~1.0",
         "yoeunes/toastr": "^1.2"
