--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,22 @@
-APP_NAME=Laravel
+APP_NAME=Kazoutech
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:rYUQWTthuVxR907gIn/hJwNI7Impghy4v85VwYiBmZY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://www.kazoutech.com
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=kazoutech
+DB_USERNAME=root
+DB_PASSWORD=12011990
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
 REDIS_HOST=127.0.0.1
@@ -24,8 +24,8 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=localhost
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
