--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "geoip2/geoip2": "~2.0",
         "intervention/image": "^2.4",
         "laravel/framework": "^6.0",
+        "laravel/helpers": "^1.1",
         "laravel/horizon": "^3.2",
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
