--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/helpers": "^1.1",
         "laravel/horizon": "^3.2",
         "laravel/passport": "^7.3",
+        "laravel/socialite": "^4.2",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0",
         "overtrue/laravel-follow": "^1.1",
@@ -30,9 +31,9 @@
         "spatie/laravel-activitylog": "^3.6",
         "spatie/laravel-backup": "^6.2",
         "spatie/laravel-cookie-consent": "^2.8",
-        "spatie/laravel-event-projector": "3.0",
+        "spatie/laravel-event-sourcing": "1.0",
         "spatie/laravel-medialibrary": "^7.0.0",
-        "spatie/laravel-newsletter": "^4.5",
+        "spatie/laravel-newsletter": "^4.7",
         "spatie/laravel-permission": "^3.0",
         "spatie/laravel-searchable": "^1.3",
         "waavi/sanitizer": "~1.0",
@@ -50,6 +51,10 @@
         "react/dns": "^0.4.19"
     },
     "config": {
+        "platform": {
+            "ext-pcntl": "7.2",
+            "ext-posix": "7.2"
+        },
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true
