--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,14 @@
     "require": {
         "php": "^7.1.3",
         "awssat/laravel-visits": "^2.0",
+        "barryvdh/laravel-cors": "^0.11.4",
+        "barryvdh/laravel-dompdf": "^0.8.5",
         "code4mk/lara-head": "dev-master",
         "cviebrock/eloquent-sluggable": "^6.0",
         "fideloper/proxy": "^4.0",
         "geoip2/geoip2": "~2.0",
         "intervention/image": "^2.4",
+        "kitetail/zttp": "^0.6.0",
         "laravel/framework": "^6.0",
         "laravel/helpers": "^1.1",
         "laravel/horizon": "^3.2",
