--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "vform": "^1.0.1",
         "vue-progressbar": "^0.7.5",
         "vue-rate": "^2.2.0",
+        "vue-recaptcha": "^1.2.0",
         "vue-resource": "^1.5.1",
         "vue-select": "^3.2.0",
         "vue-the-mask": "^0.11.1",
