--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "barryvdh/laravel-dompdf": "^0.8.5",
         "code4mk/lara-head": "dev-master",
         "cviebrock/eloquent-sluggable": "^6.0",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "geoip2/geoip2": "~2.0",
         "intervention/image": "^2.4",
