--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,9 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+MAILCHIMP_APIKEY=e4e31cc06e2d6c88ea33f748eb5f6c94-us16
+MAILCHIMP_LIST_ID=996bcb6672
+
 MAIL_DRIVER=smtp
 MAIL_HOST=localhost
 MAIL_PORT=1025
@@ -37,6 +40,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
 
 
 RECAPTCHA_SITE_KEY=
