--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,7 +3,12 @@
         Options -MultiViews -Indexes
     </IfModule>
 
-    RewriteEngine On
+    #RewriteEngine On
+
+    # Redirect to www
+     RewriteCond %{HTTP_HOST} ^[^.]+\.[^.]+$
+     RewriteCond %{HTTPS}s ^on(s)|
+     RewriteRule ^ http%1://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
