--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,12 +3,10 @@
         Options -MultiViews -Indexes
     </IfModule>
 
-    #RewriteEngine On
 
-    # Redirect to www
-     RewriteCond %{HTTP_HOST} ^[^.]+\.[^.]+$
-     RewriteCond %{HTTPS}s ^on(s)|
-     RewriteRule ^ http%1://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+     RewriteEngine On
+     RewriteCond %{HTTP_HOST} !^www\. [NC]
+     RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
