correction default implement pusher

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_DATABASE=kazoutech
 DB_USERNAME=root
 DB_PASSWORD=12011990
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=redis
@@ -26,6 +26,8 @@ REDIS_PORT=6379
 MAILCHIMP_APIKEY=e4e31cc06e2d6c88ea33f748eb5f6c94-us16
 MAILCHIMP_LIST_ID=996bcb6672
 
+
+
 MAIL_DRIVER=smtp
 MAIL_HOST=localhost
 MAIL_PORT=1025
@@ -33,10 +35,11 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+
+PUSHER_APP_ID=882403
+PUSHER_APP_KEY=bb111d679107e6fdcbd8
+PUSHER_APP_SECRET=963c0afbffe87b6e3bcb
+PUSHER_APP_CLUSTER=eu
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
