--- a/package.json
+++ b/package.json
@@ -24,24 +24,27 @@
         "sass-loader": "^7.3.1",
         "terser": "^3.14.1",
         "vue": "^2.6.10",
+        "vue-loader": "^15.7.1",
         "vue-router": "^3.1.3",
         "vue-template-compiler": "^2.6.10",
-        "webpack": "^4.41.2"
+        "webpack": "^4.41.2",
+        "webpack-cli": "^3.3.9"
     },
     "dependencies": {
         "animate.css": "^3.7.2",
+        "babel-loader": "^8.0.6",
         "babel-runtime": "^6.26.0",
         "es6-promise": "^4.2.8",
         "laravel-echo": "^1.6.1",
         "laravel-vue-pagination": "^2.3.1",
         "material-icons": "^0.3.1",
-        "medium-editor": "^5.23.3",
         "moment": "^2.24.0",
         "pusher-js": "^4.4.0",
         "select2": "^4.0.11",
         "sweetalert2": "^7.33.1",
         "vee-validate": "^3.0.11",
         "vform": "^1.0.1",
+        "vue-infinite-loading": "^2.4.4",
         "vue-progressbar": "^0.7.5",
         "vue-rate": "^2.2.0",
         "vue-recaptcha": "^1.2.0",
