mise a jour contact page

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,14 @@ REDIS_PORT=6379
 MAILCHIMP_APIKEY=e4e31cc06e2d6c88ea33f748eb5f6c94-us16
 MAILCHIMP_LIST_ID=996bcb6672
 
+ALGOLIA_APP_ID=
+ALGOLIA_SECRET=
+SCOUT_QUEUE=true
+
+
+MIX_ALGOLIA_APP_ID=
+MIX_ALGOLIA_SEARCH=
+
 
 
 MAIL_DRIVER=smtp
