--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "algolia/algoliasearch-client-php": "^2.4",
         "awssat/laravel-visits": "^2.0",
         "barryvdh/laravel-cors": "^0.11.4",
         "barryvdh/laravel-dompdf": "^0.8.5",
@@ -23,6 +24,7 @@
         "laravel/helpers": "^1.1",
         "laravel/horizon": "^3.2",
         "laravel/passport": "^7.3",
+        "laravel/scout": "^7.2",
         "laravel/socialite": "^4.2",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0",
