--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=kazoutech
 DB_USERNAME=root
-DB_PASSWORD=12011990
+DB_PASSWORD=kazoutech2019
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=redis
