--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "fideloper/proxy": "^4.0",
         "geoip2/geoip2": "~2.0",
         "intervention/image": "^2.4",
+        "julienbourdeau/route-usage": "^0.2.0",
         "kitetail/zttp": "^0.6.0",
         "laravel/framework": "^6.0",
         "laravel/helpers": "^1.1",
