--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
         "pusher-js": "^4.4.0",
         "select2": "^4.0.11",
         "sweetalert2": "^7.33.1",
+        "tiptap": "^1.26.4",
         "vee-validate": "^3.0.11",
         "vform": "^1.0.1",
         "vue-infinite-loading": "^2.4.4",
         "vue-progressbar": "^0.7.5",
+        "vue-quill-editor": "^3.0.6",
         "vue-rate": "^2.2.0",
         "vue-recaptcha": "^1.2.0",
         "vue-resource": "^1.5.1",
