--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "spatie/laravel-newsletter": "^4.7",
         "spatie/laravel-permission": "^3.0",
         "spatie/laravel-searchable": "^1.3",
+        "tightenco/ziggy": "^0.8.1",
         "waavi/sanitizer": "~1.0",
         "yoeunes/toastr": "^1.2"
     },
