--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,5 @@
 {
-    "/js/reactjs/app.js": "/js/reactjs/app.js?id=d2316d6041898b89bf2b",
-    "/js/reactjs/app.js.map": "/js/reactjs/app.js.map?id=00ea92b52ed3527a599d",
-    "/js/vuejs/app.js": "/js/vuejs/app.js?id=d5895831b76688061e4d",
-    "/js/vuejs/app.js.map": "/js/vuejs/app.js.map?id=71e1cd25d83fac0c7f4c",
-    "/js/vuejs/axios.js": "/js/vuejs/axios.js?id=c7436173109d3a729a68",
-    "/js/vuejs/axios.js.map": "/js/vuejs/axios.js.map?id=cc30f0c5e98c824855fc"
+    "/js/reactjs/app.js": "/js/reactjs/app.js",
+    "/js/vuejs/app.js": "/js/vuejs/app.js",
+    "/js/vuejs/axios.js": "/js/vuejs/axios.js"
 }
