--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "prop-types": "^15.7.2",
         "pusher-js": "^5.0.3",
         "react-router-dom": "^5.1.2",
+        "reactstrap": "^8.2.0",
         "select2": "^4.0.12",
         "sweetalert2": "^9.5.3",
         "tiptap": "^1.26.6",
