--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "moment": "^2.24.0",
         "prop-types": "^15.7.2",
         "pusher-js": "^5.0.3",
+        "react-quill": "^1.3.3",
         "react-router-dom": "^5.1.2",
         "reactstrap": "^8.2.0",
         "select2": "^4.0.12",
