--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "pusher-js": "^5.0.3",
         "react-quill": "^1.3.3",
         "react-router-dom": "^5.1.2",
+        "react-virtualized": "^9.21.2",
         "reactstrap": "^8.2.0",
         "select2": "^4.0.12",
         "sweetalert2": "^9.5.3",
