--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,8 @@
 {
-    "/js/reactjs/app.js": "/js/reactjs/app.js",
-    "/js/vuejs/app.js": "/js/vuejs/app.js",
-    "/js/vuejs/axios.js": "/js/vuejs/axios.js"
+    "/js/reactjs/app.js": "/js/reactjs/app.js?id=08cb5a6772432c58ac7c",
+    "/js/reactjs/app.js.map": "/js/reactjs/app.js.map?id=24e7aea2076196e97902",
+    "/js/vuejs/app.js": "/js/vuejs/app.js?id=f9735d11f9c25dce518c",
+    "/js/vuejs/app.js.map": "/js/vuejs/app.js.map?id=553c8f41ab8c441d6b95",
+    "/js/vuejs/axios.js": "/js/vuejs/axios.js?id=812553cb957889e10228",
+    "/js/vuejs/axios.js.map": "/js/vuejs/axios.js.map?id=18fffb798d0fea4294db"
 }
