--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,5 @@
 {
-    "/js/reactjs/app.js": "/js/reactjs/app.js?id=b52cca4f8d68828433f4",
-    "/js/reactjs/app.js.map": "/js/reactjs/app.js.map?id=058e6676ea4abb4b8fd4",
-    "/js/vuejs/app.js": "/js/vuejs/app.js?id=0dd95c3615fb9f08e363",
-    "/js/vuejs/app.js.map": "/js/vuejs/app.js.map?id=a669f4df3dc72cc42dee",
-    "/js/vuejs/axios.js": "/js/vuejs/axios.js?id=812553cb957889e10228",
-    "/js/vuejs/axios.js.map": "/js/vuejs/axios.js.map?id=18fffb798d0fea4294db"
+    "/js/reactjs/app.js": "/js/reactjs/app.js",
+    "/js/vuejs/app.js": "/js/vuejs/app.js",
+    "/js/vuejs/axios.js": "/js/vuejs/axios.js"
 }
