--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,5 @@
 {
-    "/js/reactjs/app.js": "/js/reactjs/app.js?id=d5e0e4b9d5acef7ea8c2",
-    "/js/reactjs/app.js.map": "/js/reactjs/app.js.map?id=54ee10b77f3fa79b65dc",
-    "/js/vuejs/app.js": "/js/vuejs/app.js?id=f617c171c78c38f9e30a",
-    "/js/vuejs/app.js.map": "/js/vuejs/app.js.map?id=b56ada30c132bb862601",
-    "/js/vuejs/axios.js": "/js/vuejs/axios.js?id=812553cb957889e10228",
-    "/js/vuejs/axios.js.map": "/js/vuejs/axios.js.map?id=18fffb798d0fea4294db"
+    "/js/reactjs/app.js": "/js/reactjs/app.js",
+    "/js/vuejs/app.js": "/js/vuejs/app.js",
+    "/js/vuejs/axios.js": "/js/vuejs/axios.js"
 }
