--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,5 @@
 {
-    "/js/reactjs/app.js": "/js/reactjs/app.js?id=ffc2e0db6beefde20861",
-    "/js/reactjs/app.js.map": "/js/reactjs/app.js.map?id=68c5366e0f1c17ef1ea0",
-    "/js/vuejs/app.js": "/js/vuejs/app.js?id=247462099bb9e6f06057",
-    "/js/vuejs/app.js.map": "/js/vuejs/app.js.map?id=71f7c2e8b3b118fe8010",
-    "/js/vuejs/axios.js": "/js/vuejs/axios.js?id=812553cb957889e10228",
-    "/js/vuejs/axios.js.map": "/js/vuejs/axios.js.map?id=18fffb798d0fea4294db"
+    "/js/reactjs/app.js": "/js/reactjs/app.js",
+    "/js/vuejs/app.js": "/js/vuejs/app.js",
+    "/js/vuejs/axios.js": "/js/vuejs/axios.js"
 }
