--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,8 @@
 {
-    "/js/reactjs/app.js": "/js/reactjs/app.js",
-    "/js/vuejs/app.js": "/js/vuejs/app.js",
-    "/js/vuejs/axios.js": "/js/vuejs/axios.js"
+    "/js/reactjs/app.js": "/js/reactjs/app.js?id=9cd56c4b366f33352d6c",
+    "/js/reactjs/app.js.map": "/js/reactjs/app.js.map?id=ab50f3fa3e11811bd4e6",
+    "/js/vuejs/app.js": "/js/vuejs/app.js?id=14a2a42a3a57773a8e49",
+    "/js/vuejs/app.js.map": "/js/vuejs/app.js.map?id=330d9acf44405c22b8fd",
+    "/js/vuejs/axios.js": "/js/vuejs/axios.js?id=812553cb957889e10228",
+    "/js/vuejs/axios.js.map": "/js/vuejs/axios.js.map?id=18fffb798d0fea4294db"
 }
