--- a/package.json
+++ b/package.json
@@ -45,11 +45,15 @@
         "moment": "^2.24.0",
         "prop-types": "^15.7.2",
         "pusher-js": "^5.0.3",
+        "react-form-input-validation": "^2.0.2",
         "react-progress-2": "^4.4.3",
         "react-quill": "^1.3.3",
+        "react-redux": "^7.1.3",
         "react-router-dom": "^5.1.2",
         "react-virtualized": "^9.21.2",
         "reactstrap": "^8.2.0",
+        "redux": "^4.0.5",
+        "redux-form": "^8.2.6",
         "select2": "^4.0.12",
         "sweetalert2": "^9.5.3",
         "tiptap": "^1.26.6",
