--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,5 @@
 {
-    "/js/reactjs/app.js": "/js/reactjs/app.js?id=bb7ea7ffd55be1b725e3",
-    "/js/reactjs/app.js.map": "/js/reactjs/app.js.map?id=e08c5c7b26eff6ebc82c",
-    "/js/vuejs/app.js": "/js/vuejs/app.js?id=dc0a5bff1ebf5484d3fe",
-    "/js/vuejs/app.js.map": "/js/vuejs/app.js.map?id=ce3f81e08d8a3013d89b",
-    "/js/vuejs/axios.js": "/js/vuejs/axios.js?id=267d5a1ecc7d63ae9bd4",
-    "/js/vuejs/axios.js.map": "/js/vuejs/axios.js.map?id=3e7646ba5a6c8caf0bf5"
+    "/js/reactjs/app.js": "/js/reactjs/app.js",
+    "/js/vuejs/app.js": "/js/vuejs/app.js",
+    "/js/vuejs/axios.js": "/js/vuejs/axios.js"
 }
