--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,8 @@
 {
-    "/js/reactjs/app.js": "/js/reactjs/app.js",
-    "/js/vuejs/app.js": "/js/vuejs/app.js",
-    "/js/vuejs/axios.js": "/js/vuejs/axios.js"
+    "/js/reactjs/app.js": "/js/reactjs/app.js?id=bbdbbdada77c2d14e7a5",
+    "/js/reactjs/app.js.map": "/js/reactjs/app.js.map?id=eac805c0e9fe52610a67",
+    "/js/vuejs/app.js": "/js/vuejs/app.js?id=3be2b3a00bb2fb14b19c",
+    "/js/vuejs/app.js.map": "/js/vuejs/app.js.map?id=8c8f1ba4a0d64f21b479",
+    "/js/vuejs/axios.js": "/js/vuejs/axios.js?id=267d5a1ecc7d63ae9bd4",
+    "/js/vuejs/axios.js.map": "/js/vuejs/axios.js.map?id=3e7646ba5a6c8caf0bf5"
 }
