fix bug and upgrade Laravel version fix query

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,5 @@
 {
-    "/js/reactjs/app.js": "/js/reactjs/app.js?id=20eceae5522029591e6f",
-    "/js/reactjs/app.js.map": "/js/reactjs/app.js.map?id=4793e40cd9a9aa4a08dd",
-    "/js/vuejs/app.js": "/js/vuejs/app.js?id=cc1d0743481afff2c4d6",
-    "/js/vuejs/app.js.map": "/js/vuejs/app.js.map?id=87ba3a6999437ba31899",
-    "/js/vuejs/axios.js": "/js/vuejs/axios.js?id=267d5a1ecc7d63ae9bd4",
-    "/js/vuejs/axios.js.map": "/js/vuejs/axios.js.map?id=3e7646ba5a6c8caf0bf5"
+    "/js/reactjs/app.js": "/js/reactjs/app.js",
+    "/js/vuejs/app.js": "/js/vuejs/app.js",
+    "/js/vuejs/axios.js": "/js/vuejs/axios.js"
 }
