--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,5 @@
 {
-    "/js/reactjs/app.js": "/js/reactjs/app.js?id=3f9706f9b83b2e094041",
-    "/js/reactjs/app.js.map": "/js/reactjs/app.js.map?id=076597d218b5830ab367",
-    "/js/vuejs/app.js": "/js/vuejs/app.js?id=7238403b2147f8b95230",
-    "/js/vuejs/app.js.map": "/js/vuejs/app.js.map?id=5502875edebed50094c1",
-    "/js/vuejs/axios.js": "/js/vuejs/axios.js?id=82c558cf1763d35905f0",
-    "/js/vuejs/axios.js.map": "/js/vuejs/axios.js.map?id=f32130e9b6b84fddf655"
+    "/js/reactjs/app.js": "/js/reactjs/app.js",
+    "/js/vuejs/app.js": "/js/vuejs/app.js",
+    "/js/vuejs/axios.js": "/js/vuejs/axios.js"
 }
