--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,5 @@
 {
-    "/js/reactjs/app.js": "/js/reactjs/app.js?id=1f54b7df949453175cad",
-    "/js/reactjs/app.js.map": "/js/reactjs/app.js.map?id=8d19a477e31f25297aa8",
-    "/js/vuejs/app.js": "/js/vuejs/app.js?id=11b356e30ccb23768ee8",
-    "/js/vuejs/app.js.map": "/js/vuejs/app.js.map?id=e6db4702cca8deb2d6e8",
-    "/js/vuejs/axios.js": "/js/vuejs/axios.js?id=82c558cf1763d35905f0",
-    "/js/vuejs/axios.js.map": "/js/vuejs/axios.js.map?id=f32130e9b6b84fddf655"
+    "/js/reactjs/app.js": "/js/reactjs/app.js",
+    "/js/vuejs/app.js": "/js/vuejs/app.js",
+    "/js/vuejs/axios.js": "/js/vuejs/axios.js"
 }
