--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "react-loading-skeleton": "^2.0.1",
         "react-progress-2": "^4.4.3",
         "react-quill": "^1.3.3",
+        "react-read-more-less": "^0.1.6",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
         "react-virtualized": "^9.21.2",
