--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,8 @@
 {
-    "/js/reactjs/app.js": "/js/reactjs/app.js",
-    "/js/vuejs/app.js": "/js/vuejs/app.js",
-    "/js/vuejs/axios.js": "/js/vuejs/axios.js"
+    "/js/reactjs/app.js": "/js/reactjs/app.js?id=4cc1d76045ddfb872412",
+    "/js/reactjs/app.js.map": "/js/reactjs/app.js.map?id=35dc4e00ea86b811e2fe",
+    "/js/vuejs/app.js": "/js/vuejs/app.js?id=541030e5a46ba2990cc2",
+    "/js/vuejs/app.js.map": "/js/vuejs/app.js.map?id=b5add8a07365c812ad96",
+    "/js/vuejs/axios.js": "/js/vuejs/axios.js?id=82c558cf1763d35905f0",
+    "/js/vuejs/axios.js.map": "/js/vuejs/axios.js.map?id=f32130e9b6b84fddf655"
 }
