--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,19 @@ APP_URL=http://www.kazoutech.com
 
 LOG_CHANNEL=stack
 
+APP_DESCRIPTION="Spécialiste de la mise en relation pour les services à domicile. Trouvez la bonne personne pour vous aider dans votre quotidien : informatique, méccanique, plomberie, soudure, maconnerie, location multiple, electricité, froid et climatisation."
+APP_AUTHOR="KazouGroup"
+APP_COUNTRY="Cameroun"
+APP_COUNTRY_SIGLE="CM"
+APP_KEYWORDS="informatique, méccanique, plomberie, soudure, maconnerie, location multiple, electricité, froid et climatisation"
+APP_TITLE="Prestations de servive | Trouvez des professionnels proches de chez vous pour tous vos projets | 1er site spécialiste de la mise en relation camerounais | Tous les professionnels, au meilleur prix | Portail service du cameroun"
+
+APP_FACEBOOK_GROUP="link facebook"
+APP_GOOGLE_GROUP="link google"
+APP_TWITTER_GROUP="link twitter"
+EMAIL_ADDRESS = "temgoua2013@gmail.com"
+APP_PHONE = "0039 3425712192 / 00237 77443322"
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
