--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
         "prop-types": "^15.7.2",
         "pusher-js": "^5.1.1",
         "react-form-input-validation": "^2.0.3",
+        "react-js-pagination": "^3.0.3",
+        "react-lazyload": "^2.6.7",
         "react-loading-skeleton": "^2.0.1",
         "react-progress-2": "^4.4.3",
         "react-quill": "^1.3.5",
