--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^7.0.2",
-        "jquery": "^3.5.0",
+        "jquery": "^3.5.1",
         "laravel-mix": "^5.0.4",
         "lodash": "^4.17.15",
         "popper.js": "^1.16.1",
@@ -24,28 +24,29 @@
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.1",
         "resolve-url-loader": "^3.1.1",
-        "sass": "^1.26.3",
+        "sass": "^1.26.5",
         "sass-loader": "^8.0.2",
-        "terser": "^4.6.11",
+        "terser": "^4.6.13",
         "vue": "^2.6.11",
-        "vue-loader": "^15.9.1",
+        "vue-loader": "^15.9.2",
         "vue-router": "^3.1.6",
         "vue-template-compiler": "^2.6.11",
-        "webpack": "^4.42.1",
+        "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11"
     },
     "dependencies": {
-        "animate.css": "^3.7.2",
+        "animate.css": "^4.0.0",
         "babel-loader": "^8.1.0",
         "babel-runtime": "^6.26.0",
         "es6-promise": "^4.2.8",
         "laravel-echo": "^1.7.0",
         "laravel-vue-pagination": "^2.3.1",
         "material-icons": "^0.3.1",
-        "moment": "^2.24.0",
+        "moment": "^2.25.3",
         "prop-types": "^15.7.2",
-        "pusher-js": "^5.1.1",
+        "pusher-js": "^6.0.2",
         "react-form-input-validation": "^2.0.3",
+        "react-helmet": "^6.0.0",
         "react-js-pagination": "^3.0.3",
         "react-lazyload": "^2.6.7",
         "react-loading-skeleton": "^2.0.1",
@@ -57,12 +58,12 @@
         "react-virtualized": "^9.21.2",
         "reactstrap": "^8.4.1",
         "redux": "^4.0.5",
-        "redux-form": "^8.3.3",
+        "redux-form": "^8.3.5",
         "redux-thunk": "^2.3.0",
         "select2": "^4.0.13",
-        "sweetalert2": "^9.10.10",
-        "tiptap": "^1.27.0",
-        "vee-validate": "^3.2.5",
+        "sweetalert2": "^9.10.12",
+        "tiptap": "^1.27.1",
+        "vee-validate": "^3.3.0",
         "vform": "^1.0.1",
         "vue-infinite-loading": "^2.4.5",
         "vue-progressbar": "^0.7.5",
@@ -70,12 +71,12 @@
         "vue-rate": "^2.2.0",
         "vue-recaptcha": "^1.3.0",
         "vue-resource": "^1.5.1",
-        "vue-select": "^3.9.5",
+        "vue-select": "^3.10.3",
         "vue-the-mask": "^0.11.1",
         "vue2-editor": "^2.10.2",
-        "vue2-filters": "^0.10.0",
+        "vue2-filters": "^0.11.0",
         "vue2-storage": "^5.0.0",
-        "vuex": "^3.1.3",
+        "vuex": "^3.3.0",
         "yimo-vue-editor": "^1.1.5"
     }
 }
