--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,5 @@
 {
-    "/js/reactjs/app.js": "/js/reactjs/app.js?id=fb8a04fe0f5ad67c5bd3",
-    "/js/reactjs/app.js.map": "/js/reactjs/app.js.map?id=defbf2c4397ded3b4da6",
-    "/js/vuejs/app.js": "/js/vuejs/app.js?id=3c4983a8b51b67f3f792",
-    "/js/vuejs/app.js.map": "/js/vuejs/app.js.map?id=24b183b8ee4ee12b28c7",
-    "/js/vuejs/axios.js": "/js/vuejs/axios.js?id=82c558cf1763d35905f0",
-    "/js/vuejs/axios.js.map": "/js/vuejs/axios.js.map?id=f32130e9b6b84fddf655"
+    "/js/reactjs/app.js": "/js/reactjs/app.js",
+    "/js/vuejs/app.js": "/js/vuejs/app.js",
+    "/js/vuejs/axios.js": "/js/vuejs/axios.js"
 }
