refactoring heading tags

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Kazoutech
 APP_ENV=local
-APP_KEY=base64:rYUQWTthuVxR907gIn/hJwNI7Impghy4v85VwYiBmZY=
+APP_KEY=
 APP_DEBUG=true
-APP_URL=http://www.kazoutech.com
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
@@ -46,8 +46,6 @@ SCOUT_QUEUE=true
 
 MIX_ALGOLIA_APP_ID=
 MIX_ALGOLIA_SEARCH=
-
-
 
 MAIL_DRIVER=smtp
 MAIL_HOST=localhost
