--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "^9.11",
         "laravel/helpers": "^1.1",
         "laravel/horizon": "^5.9",
+        "laravel/legacy-factories": "^1.3",
         "laravel/passport": "^10.4",
         "laravel/sanctum": "^2.14.1",
         "laravel/telescope": "^4.9",
