--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "code4mk/lara-head": "dev-master",
         "cviebrock/eloquent-sluggable": "^9.0",
         "doctrine/dbal": "^2.9",
+        "fruitcake/laravel-cors": "^3.0",
         "geoip2/geoip2": "~2.0",
         "intervention/image": "^2.4",
         "laravel/framework": "^9.11",
